tests/errors/fail_before_silence.error
parse error at line 1 column 2 for Tag:
!(command)
 ^